--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "avatar-downloader",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "download_avatars.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node download_avatars.js"
   },
   "author": "",
   "license": "ISC",
